--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "ng2-i18n-xlf",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server -c bs-config.js\" ",
-    "build:aot": "for l in 'en' 'de' 'ru'; do ngc --i18nFile=./locale/messages.$l.xlf --locale=$l --i18nFormat=xlf -p tsconfig-aot.json && rollup -c rollup.config.js && node copy-dist-files.js && mv aot/dist/build.js aot/dist/build.$l.js; done",
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "build:aot": "npm run i18n:aot:en && npm run i18n:aot:de && npm run i18n:aot:ru",
     "lite:aot": "lite-server -c aot/bs-config.js",
-    "lite": "lite-server -c bs-config.js",
+    "lite": "lite-server",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "i18n": "ng-xi18n  --i18nFormat=xlf",
     "i18n:aot:de": "ngc --i18nFile=./locale/messages.de.xlf --locale=de --i18nFormat=xlf -p tsconfig-aot.json && rollup -c rollup.config.js && node copy-dist-files.js && mv aot/dist/build.js aot/dist/build.de.js",
-    "i18n:aot:en": "ngc --i18nFile=./locale/messages.en.xlf --locale=en --i18nFormat=xlf -p tsconfig-aot.json && rollup -c rollup.config.js && node copy-dist-files.js && mv aot/dist/build.js aot/dist/build.en.js",
+    "i18n:aot:en": "ngc -p tsconfig-aot.json && rollup -c rollup.config.js && node copy-dist-files.js && mv aot/dist/build.js aot/dist/build.en.js",
     "i18n:aot:ru": "ngc --i18nFile=./locale/messages.ru.xlf --locale=ru --i18nFormat=xlf -p tsconfig-aot.json && rollup -c rollup.config.js && node copy-dist-files.js && mv aot/dist/build.js aot/dist/build.ru.js"
   },
   "repository": "github:ibqn/ng2-i18n-xlf.git",
