--- a/package.json
+++ b/package.json
@@ -15,32 +15,32 @@
   },
   "repository": "github:ibqn/ng2-i18n-xlf.git",
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/compiler-cli": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/platform-server": "^2.4.1",
-    "@angular/router": "^3.4.1",
-    "@angular/upgrade": "^2.4.1",
+    "@angular/common": "^2.4.3",
+    "@angular/compiler": "^2.4.3",
+    "@angular/compiler-cli": "^2.4.3",
+    "@angular/core": "^2.4.3",
+    "@angular/forms": "^2.4.3",
+    "@angular/http": "^2.4.3",
+    "@angular/platform-browser": "^2.4.3",
+    "@angular/platform-browser-dynamic": "^2.4.3",
+    "@angular/platform-server": "^2.4.3",
+    "@angular/router": "^3.4.3",
+    "@angular/upgrade": "^2.4.3",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.2",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.3",
     "systemjs": "^0.19.41",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.5"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.53",
-    "concurrently": "^3.0.0",
+    "@types/core-js": "^0.9.35",
+    "@types/node": "^7.0.0",
+    "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "rollup": "^0.38.0",
-    "rollup-plugin-commonjs": "^6.0.1",
+    "rollup": "^0.41.3",
+    "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
-    "typescript": "~2.0.10"
+    "typescript": "^2.1.5"
   }
 }
